--- a/inicio/templates/inicio/sobre_mi.html
+++ b/inicio/templates/inicio/sobre_mi.html
@@ -9,6 +9,7 @@
 {% endblock h1_header %}
 
 {% block contenido %}
-Hola, me llamo sergio... Pero vos podes llamarme "andol"
-Esta pagina es meramente ilustrativa para terminar mi curso de python... espero te guste.   
+<p>Hola, me llamo sergio... </p>
+<p>Pero vos podes llamarme "andol"</p>
+<p>Esta pagina es meramente ilustrativa para terminar el curso de python... espero te guste. </p>  
 {% endblock contenido %}
