--- a/inicio/templates/inicio/detalle_superheroe.html
+++ b/inicio/templates/inicio/detalle_superheroe.html
@@ -13,7 +13,7 @@
 <ul>
     <li>Nombre: {{superheroe.nombre}} </li>
     <li>Super Poder: {{superheroe.superpoder}}</li>
-    <li>Motivo: {{superheroe.motivo}}</li>
+    <li>Motivo: {{superheroe.motivo | safe}}</li>
     <li>Autor: {{superheroe.autor}}</li>
 </ul>
 <a href= {% url 'inicio:modificar_superheroe' superheroe.id %}>Modificar</a> -    
