--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,13 @@
                 <a class="navbar-brand" href="{% url 'inicio:inicio' %}">Inicio</a>
                 {% comment %} <a class="navbar-brand" href="{% url 'inicio:crear_superheroe' %}">Crear Super Heroe</a> {% endcomment %}
                 <a class="navbar-brand" href="{% url 'inicio:listar_superheroes' %}">Lista de Super Heroe</a>
-                {% comment %} <a class="btn btn-primary" href="#signup">Sign Up</a> {% endcomment %}
+                {% if request.user.is_authenticated %}
+                <a class="navbar-brand" href={% url 'usuarios:editar_perfil' %}>{{request.user.username}}</a>
+                <a class="btn btn-primary" href={% url 'usuarios:logout' %}>Logout</a>
+                {% else %}
+                <a class="btn btn-primary" href={% url 'usuarios:login' %}>Login</a>
+                <a class="btn btn-primary" href={% url 'usuarios:registro' %}>Registrarse</a>
+                {% endif %}
             </div>
         </nav>
         <!-- Masthead-->
